--- a/src/app/box-login/box-login.css
+++ b/src/app/box-login/box-login.css
@@ -1,8 +1,16 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
+.planodefundo{
+    min-height: 100vh; 
+    background-image: linear-gradient(#182f6f, #050414 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
