--- a/src/app/box-login/box-login.html
+++ b/src/app/box-login/box-login.html
@@ -7,14 +7,18 @@
             </div>
             <p class="paragrafo1">Sistema de Estacionamento</p>
             <p class="paragrafo2">Entre com as suas credenciais</p>
-            <form>
-                <p class="email">Email</p>
-                <input type="e-mail" name="Nome" size="50" placeholder="seu@email.com">
-                <p class="senha">Senha</p>
-                <input type="password" name="Senha" size="50" placeholder="******">
+            <form id="loginForm">
+              <div class="input-group">
+                    <input type="text" id="email" required>
+                    <label for="email">Email</label>
+                </div>
+                <div class="input-group">
+                    <input type="password" id="senha" required>
+                    <label for="senha">Senha</label>
+                </div>
                 <button class="btn btn-1" type="submit">Entrar</button>
                 <button class="btn btn-2">Criar conta</button>
             </form>  
     </div>
 </div>
-</body>
+
