--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,1 @@
-<router-outlet>
-<div class="planodefundo">
-    <app-box-login></app-box-login>
-</div>
-</router-outlet>
+<router-outlet></router-outlet>
