--- a/src/app/box-login.component/box-login.component.html
+++ b/src/app/box-login.component/box-login.component.html
@@ -11,7 +11,7 @@
                 <p class="senha">Senha</p>
                 <input type="password" name="Senha" size="50" placeholder="******">
                 <button class="btn btn-1" type="submit">Entrar</button>
-                <button class="btn btn-2">Criar conta</button>
+                <button class="btn btn-2" routerLink="/cadastro">Criar conta</button>
             </form>  
     </div>
 
