--- a/src/app/box-cadastro/box-cadastro.css
+++ b/src/app/box-cadastro/box-cadastro.css
@@ -104,3 +104,9 @@ input:focus {
     color: #000;
     border: 1px solid #333;
 }
+select{
+    height: 3vh;
+    width: 26vh;
+    border-radius: 8px;
+    color: #333;
+}
