--- a/src/app/box-login.component/box-login.component.html
+++ b/src/app/box-login.component/box-login.component.html
@@ -10,7 +10,7 @@
                 <input type="e-mail" name="Nome" size="50" placeholder="seu@email.com">
                 <p class="senha">Senha</p>
                 <input type="password" name="Senha" size="50" placeholder="******">
-                <button class="btn btn-1" type="submit">Entrar</button>
+                <button class="btn btn-1" type="submit" routerLink="reserva">Entrar</button>
                 <button class="btn btn-2" routerLink="/cadastro">Criar conta</button>
             </form>  
     </div>
