--- a/src/app/michael/michael.html
+++ b/src/app/michael/michael.html
@@ -1,2 +1,98 @@
-<p>michael works!</p>
-<h1>teste</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Painel Administrativo - Estacionamento</title>
+</head>
+
+<body>
+
+<header class="top-bar">
+    <h1>Painel Administrativo - Estacionamento</h1>
+    <button class="btn-sair">Sair</button>
+</header>
+
+<section class="info-cards">
+
+    <div class="info-card">
+        <span class="label">Total de Vagas</span>
+        <h2>50</h2>
+    </div>
+
+    <div class="info-card">
+        <span class="label">Vagas Livres</span>
+        <h2 class="green">46</h2>
+    </div>
+
+    <div class="info-card">
+        <span class="label">Vagas usadas</span>
+        <h2 class="red">4</h2>
+    </div>
+
+    <div class="info-card">
+        <span class="label">Movimentação Hoje</span>
+        <h2>15</h2>
+    </div>
+
+</section>
+
+<section class="actions">
+    <button class="btn-enter">Entrada do Registrador</button>
+    <button class="btn-register">Registrador</button>
+</section>
+
+<section class="list-area">
+
+    <h3>Carros Recentes no Estacionamento</h3>
+    <span class="sub">Últimas entradas registradas</span>
+
+    <div class="car-item">
+        <div class="left">
+            <div class="top-line">
+                <span class="plate">ABC-1234</span>
+                <span class="status active">Ativo</span>
+            </div>
+            <span class="hour">09:26</span>
+        </div>
+        <span class="value">R$ 4,00</span>
+    </div>
+
+    <div class="car-item">
+        <div class="left">
+            <div class="top-line">
+                <span class="plate">XYZ-5678</span>
+                <span class="status left">Saiu</span>
+            </div>
+            <span class="hour">08:58</span>
+        </div>
+        <span class="value">R$ 8,00</span>
+    </div>
+
+    <div class="car-item">
+        <div class="left">
+            <div class="top-line">
+                <span class="plate">DEF-2842</span>
+                <span class="status active">Ativo</span>
+            </div>
+            <span class="hour">07:42</span>
+        </div>
+        <span class="value">R$ 3,00</span>
+    </div>
+
+    <div class="car-item">
+        <div class="left">
+            <div class="top-line">
+                <span class="plate">GHI-3452</span>
+                <span class="status done">Finalizado</span>
+            </div>
+            <span class="hour">06:20</span>
+        </div>
+        <span class="value">R$ 5,50</span>
+    </div>
+
+</section>
+
+
+</body>
+</html>
