--- a/src/app/augusto/augusto.html
+++ b/src/app/augusto/augusto.html
@@ -10,7 +10,7 @@
     </div>
     <div class="cards">
         <div class="esquerdacard">
-            <h4>João Silva</h4>
+            <Label>João Silva</Label>
             <p>Recarga administrativa</p>
             <p class="num">10/11/2025, 10:30</p>
         </div>
@@ -21,7 +21,7 @@
     </div>
     <div class="cards">
         <div class="esquerdacard">
-            <h4>Francisco bezzero</h4>
+            <label>Francisco bezzero</label>
             <p>Estacionamento - Ticket</p>
             <p class="num">09/11/2025, 17:30</p>
         </div>
@@ -32,7 +32,7 @@
     </div>
     <div class="cards">
         <div class="esquerdacard">
-            <h4>Bigode dos santos</h4>
+            <label>Bigode dos santos</label>
             <p>Recarga pessoal</p>
             <p class="num">09/11/2025, 10:00</p>
         </div>
@@ -43,7 +43,7 @@
     </div>
     <div class="cards">
         <div class="esquerdacard">
-            <h4>Michael Pai</h4>
+            <label>Michael Pai</label>
             <p>Estacionamento</p>
             <p class="num">08/11/2025, 09:30</p>
         </div>
