--- a/src/app/michael/michael.css
+++ b/src/app/michael/michael.css
@@ -248,7 +248,6 @@ body {
     }
 }
 
-/* ----------------------- CELULAR PEQUENO --------------------------- */
 
 @media (max-width: 480px) {
 
@@ -288,7 +287,7 @@ body {
 .top-line {
     display: flex;
     align-items: center;
-    gap: 10px; /* espaçamento entre placa e status */
+    gap: 10px; 
 }
 
 .plate {
@@ -302,7 +301,7 @@ body {
     margin-top: 2px;
 }
 
-/* STATUS NOVO (pequeno e encaixado) */
+
 .status {
     padding: 4px 10px;
     border-radius: 10px;
@@ -324,10 +323,10 @@ body {
 }
 
 .main-container {
-    padding: 0 40px; /* espaço igual dos dois lados */
+    padding: 0 40px; 
 }
 .main-container {
-    max-width: 1200px;   /* largura máxima que mantém tudo centralizado */
-    margin: 0 auto;      /* centraliza e cria espaçamento automático */
-    padding: 0 20px;     /* espaçamento lateral suave */
+    max-width: 1200px;   
+    margin: 0 auto;      
+    padding: 0 20px;     
 }
