--- a/src/app/augusto/augusto.css
+++ b/src/app/augusto/augusto.css
@@ -8,7 +8,7 @@ body{
 .selecao{
     display: flex;
     gap: 5vh;
-    background-color: rgba(94, 102, 114, 0.301);
+    background-color: rgba(210, 211, 213, 0.665);
     width: 40vh;
     height: 3vh;
     align-items: center;
@@ -20,7 +20,7 @@ body{
     margin-left: 2vh;
 }
 .diferente{
-    background-color: white;
+    background-color: rgb(245, 243, 243);
     height: 2vh;
     align-items: center;
     justify-content: center;
@@ -80,7 +80,7 @@ h4{
     color: red;
 }
 .motivo{
-    background-color: rgba(94, 102, 114, 0.301);
+    background-color: gray;
     border-radius: 5px;
 }
 .recargamot{
