--- a/src/app/recarga/recarga.html
+++ b/src/app/recarga/recarga.html
@@ -1,1 +1,73 @@
-<p>recarga works!</p>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="recarga.css">
+</head>
+<!-- =============== PARTE DE EDMILSON ============= -->
+<body>
+    
+    <h2>Bem-vindo, Edmilson-Dev!</h2>
+    <p>Gerencie o seu cartão de estacionamento</p>
+    <button class="botao-sair"> → Sair</button>
+
+    <section class="card-estacionamento flex">
+    <div class="column gap">
+        <h3>Cartão de Estacionamento</h3>
+        <h2>Edmilson-Dev</h2>
+
+        <div class="flex gap">
+            <span class="tag">Aluno</span>
+            <span class="tag">Matrícula: 0222520</span>
+        </div>
+
+        <p class="e-mail-edmilson">EdmilsonSantos@gmail.com</p>
+        <p class="valor_cartão">Valor por uso</p>
+        <p class="valor_cartão"><strong>R$ 8.00</strong></p>
+    </div>
+
+    <div style="font-size: 40px;">
+        <p><img src="https://tse1.mm.bing.net/th/id/OIP.5Cl6oObPvEKi5jPTWE1TdwHaHa?rs=1&pid=ImgDetMain&o=7&rm=3"></p>
+        </div>
+</section>
+<div class="disponivel-recarregar">
+   <div class="card saldo-card">
+        <strong>Saldo Disponível</strong>
+        <p class="valor">R$ 2,00</p>
+        <p class="info">Você pode usar o estacionamento aproximadamente 1 vez</p>
+    </div>
+
+    <div class="card recarregar-card">
+        <strong>Recarregar Cartão</strong>
+        <button class="btn-primary">Fazer Recarga</button>
+    </div>
+</div>
+<br>   
+
+<div class="historico">
+    <strong><img src="https://static.vecteezy.com/ti/vetor-gratis/p1/3833977-fast-delivery-icon-with-timer-fast-stopwatch-line-icon-fast-delivery-shipping-service-sign-speed-clock-symbol-urgency-deadline-time-management-competition-sign-stock-vector-vetor.jpg"> Ultimas recargas</strong>
+    <p class="sub-titulo">Suas ultimas transações</p>
+   <div class="card item-recarga">
+        <div class="textos">
+            <p class="titulo">Recarga pessoal</p>
+            <p class="data">12/11/2025, 11:50</p>
+        </div>
+        <div class="valor-acao">
+            <p class="valor verde">+ R$ 5,00</p>
+        </div>
+    </div>
+
+    <div class="card item-recarga">
+        <div class="textos">
+            <p class="titulo">Recarga pessoal</p>
+            <p class="data">18/11/2025, 01:16</p>
+        </div>
+        <div class="valor-acao">
+            <p class="valor verde">+ R$ 20,00</p>
+
+        </div>
+    </div>
+</div>
+</html>
