--- a/src/app/augusto/augusto.css
+++ b/src/app/augusto/augusto.css
@@ -3,6 +3,7 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #f2f2f2;
 
 }
 .selecao{
