--- a/src/app/pages/logintela/logintela.html
+++ b/src/app/pages/logintela/logintela.html
@@ -1,3 +1,3 @@
 <div class="planodefundo">
-    <app-box-login></app-box-login>
+    <app-box-login (onLogin)="login($event)"></app-box-login>
 </div>
