botoes voltar para login

--- a/src/app/michael/michael.html
+++ b/src/app/michael/michael.html
@@ -10,7 +10,7 @@
 
 <header class="top-bar">
     <h1>Painel Administrativo - Estacionamento</h1>
-    <button class="btn-sair">Sair</button>
+    <button class="btn-sair" (click)="LogOut()">Sair</button>
 </header>
 
 <section class="info-cards">
