--- a/src/app/recarga/recarga.html
+++ b/src/app/recarga/recarga.html
@@ -11,7 +11,7 @@
     
     <h2>Bem-vindo, Edmilson-Dev!</h2>
     <p>Gerencie o seu cartão de estacionamento</p>
-    <button class="botao-sair"> → Sair</button>
+    <button class="botao-sair" (click)="LogOut()"> → Sair</button>
 
     <section class="card-estacionamento flex">
     <div class="column gap">
